# hnet

./: .gitignore  CITATION.cff  LICENCE.txt  LICENSE  MANIFEST.in  README.md  edge1.csv  hnet.py  hnet1.py  hnet_dashboard.py  make_build.sh  make_clean.sh  make_new_build.sh  node1.csv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py
.github/: FUNDING.yml
DEPRICATED/: picklefast.py
codebase/: hnet.py  hnet_dashboard.py
codebase/helpers/: d3graph.py  df2onehot.py  network.py  showprogress.py  twoClassSummary.py
depricated/: df2onehot.py  set_dtypes.py
docs/: HOWTO.txt
docs/figs/: fig1.pptx  fig1_ver.pptx  fig2.pptx  fig3_ver.pptx
docs/manuscript/: HNet_manuscript_Erdogan_Taskesen.docx  HNet_manuscript_Erdogan_Taskesen_fin.docx  Manuscript.docx  Manuscript_RG.docx  Opmerkingen_Figuren.txt  ~WRL0003.tmp  ~WRL1468.tmp
docs/pages/: Abstract.html  Coding quality.html  Documentation.html  Examples.html  Installation.html  Methods.html  Plots.html  Use Cases.html  genindex.html  hnet.hnet.html  index.html  input_output.html  objects.inv  py-modindex.html  search.html  searchindex.js  sponsor.html
docs/presentation/: PyData_Erdogan_Taskesen_8okt_2020.pptx
docs/source/: Abstract.rst  Blog.rst  Coding quality.rst  Datasets.rst  Documentation.rst  Examples.rst  Installation.rst  Methods.rst  Plots.rst  Use Cases.rst  add_bottom.add  conf.py  hnet.hnet.rst  index.rst  input_output.rst
helpers/: CAP.py  d3graph.py  network.py
hnet/: __init__.py  adjmat_vec.py  examples.py  hnet.py  hnet_dashboard.py  hnstats.py  network.py  savefig.py  test.py
hnet/.pylint.d/: hnet.hnet1.stats
hnet/gui/: hnet_gui.py
hnet/helpers/: d3graph.py  df2onehot.py  imagesc.py  network.py  (+2 more)
manuscript/: Manuscript.docx
notebooks/: hnet.ipynb
tests/: tests_hnet.py
(+93 files in other folders)
